--- a/GitHubAnimator/GitHubAnimator.fsproj
+++ b/GitHubAnimator/GitHubAnimator.fsproj
@@ -27,6 +27,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DocumentationFile>bin\Debug\GitHubAnimator.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
+    <StartArguments>-Owner pedromsantos -Repository FSharpKatas -File FizzBuzz.fs -Language language-fsharp</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
